fix alignment of controls in mobile

--- a/app/less/mobile/modules/footer.less
+++ b/app/less/mobile/modules/footer.less
@@ -10,6 +10,10 @@
         top: @footer-open-position-top-xs;
     }
 
+    .controls {
+        width: auto;
+    }
+
     .controls,
     .media {
         position: static;
